Added IREM sound, so Moon Patrol, and Lode Runner 1-4 now has sound. Also found some errors in tilemap.cs but not there yet, so the started driver for xaine doesn't work

--- a/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
+++ b/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
@@ -190,6 +190,7 @@
     <Compile Include="mame\drivers\pleiads.cs" />
     <Compile Include="mame\drivers\driver_speedbal.cs" />
     <Compile Include="mame\drivers\driver_qix.cs" />
+    <Compile Include="mame\drivers\xain.cs" />
     <Compile Include="mame\machine\atari_vg.cs">
       <SubType>Code</SubType>
     </Compile>
