Major refactoring done. Tilemapped games ( Ajax/xsleena, xevioius,pang) now starts to show. some flipping issues remain. Rewrote palette handling to use ushort[] instead of _ShortPtr (should gain some speed), ditto for pen handling

--- a/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
+++ b/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
@@ -228,6 +228,7 @@
     <Compile Include="mame\drivers\driver_mpatrol.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="mame\drivers\driver_namcos1.cs" />
     <Compile Include="mame\drivers\driver_pacman.cs">
       <SubType>Code</SubType>
     </Compile>
