Finally some more work done. Transparency problem in 1943 fixed (?), minor refactoring to sound system; but samples does not still play correctly.

--- a/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
+++ b/trunk/xnamame036/xnamame036/xnamame036/xnamame036.csproj
@@ -390,6 +390,7 @@
     <Compile Include="mame\xna\fileio.cs" />
     <Compile Include="mame\xna\input.cs" />
     <Compile Include="mame\xna\sound.cs" />
+    <Compile Include="mame\xna\SoundPlayer.cs" />
     <Compile Include="mame\xna\ticker.cs" />
     <Compile Include="mame\xna\video.cs" />
     <Compile Include="mame\xna\xna.cs" />
